--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-3">
                 <h3 id="time">
-                    
+
                 </h3>
             </div>
         </div>
@@ -67,35 +67,30 @@
     <div id="quiz-screen" class="hide">
         <div class="container screen">
             <div class="row">
-                <div class="col-12">
-                    <div class="text-center mx-0">
-                        <div class="question-el">
-                            <h1>
-                                About how much USD does a NASA space suit cost?
-                            </h1>
-                        </div>
-                    </div>
+                <div class="col-12 text-center mx-0">
+                    <h1 id="question-el">
+                    </h1>
                 </div>
             </div>
 
             <div class="row">
                 <div class="options col-12 text-center">
-                    <h1>Option A</h1>
+                    <h1></h1>
                 </div>
             </div>
             <div class="row">
                 <div class="options col-12 text-center">
-                    <h1>Option A</h1>
+                    <h1></h1>
                 </div>
             </div>
             <div class="row">
                 <div class="options col-12 text-center">
-                    <h1>Option A</h1>
+                    <h1></h1>
                 </div>
             </div>
             <div class="row">
                 <div class="options col-12 text-center">
-                    <h1>Option A</h1>
+                    <h1></h1>
                 </div>
             </div>
 
@@ -112,21 +107,21 @@
 
             <div class="row">
                 <div class="col-6">
-                    <button id="ansr-btn-a" class="ansr-btns nuetral" type="button">A </n></button>
+                    <button data-value="a" id="a" data-value="a" class="ansr-btns nuetral" type="button">A </n></button>
                 </div>
 
                 <div class="col-6">
-                    <button id="ansr-btn-b" class="ansr-btns nuetral" type="button">B</button>
+                    <button id="b" class="ansr-btns nuetral" type="button">B</button>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-6">
-                    <button id="ansr-btn-c" class="ansr-btns correct" type="button">C</button>
+                    <button id="c" class="ansr-btns correct" type="button">C</button>
                 </div>
 
                 <div class="col-6">
-                    <button id="ansr-btn-d" class="ansr-btns wrong" type="button">D</button>
+                    <button id="d" class="ansr-btns wrong" type="button">D</button>
                 </div>
             </div>
             <div class="row">
