--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                             <button type="button" id="start-btn" class="btn btn-primary start-btn">Start Game</button>
                         </div>
                         <div class="col-6">
-                            <button onclick="window.location.href = 'google.com';" target="_blank" class="btn btn-primary code-btn">View Code</button>
+                            <a href="#" class="btn btn-primary code-btn"><span id="code-btn">View Code</span></a>
+                            <!-- <button onclick="window.location.href = 'google.com';" target="_blank" class="btn btn-primary code-btn">View Code</button> -->
                         </div>
                     </div>
                 </div>
@@ -146,7 +147,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 m-auto">
-                        <h3 id="score">1466</h3>
+                        <h3 id="score"></h3>
                     </div>
                 </div>
 
@@ -158,7 +159,10 @@
 
                 <div class="row">
                     <div class="col-12 m-auto">
-                        <input type="text">
+                        <form id="form">
+                            <input id="initials" type="text" placeholder="Enter initials here">
+                            <input id="submit-btn" type="submit">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -166,6 +170,29 @@
     </div>
 
     <script src="./script.js"></script>
+
+    <!-- submitBtn.addEventListener("click", function checkScore(event) {
+        event.preventDefault();
+        var initials = document.getElementById("initials").value
+        console.log("clicked")
+        console.log(initials)
+        form.reset();
+        var playerName = initials
+        console.log(playerName)
+        var scores = []
+        playerScore = {}
+        playerScore.name = playerName
+        playerScore.score = time
+        scores.push(playerScore)
+        console.log(scores)
+        var checkedScore = JSON.parse(localStorage.getItem("scores"))
+        if (checkedScore === undefined) {
+            JSON.stringify(localStorage.setItem(scores))
+        }
+        else {
+            JSON.stringify(localStorage.setItem(scores))
+        }
+    }) -->
 
 </body>
 
