fixed timer and score button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container-fluid">
         <div class="row header">
             <div class="col-3">
-                <a id="highscore-btn" class="btn btn-primary" href="#" role="button">Your Highscores</a>
+                <a id="highscore-btn" class="btn btn-primary" href="#" role="button">Your Past Scores</a>
             </div>
             <div class="col-6 text-center">
                 <h2 class="">
-                    Super Fun Quiz Game /s
+                    Super Fun Space Quiz
                 </h2>
             </div>
             <div class="col-3">
@@ -40,29 +40,28 @@
     <!-- Start Section -->
     <div id="start-screen">
         <div class="container text-center">
-        <div class="row">
-            <div class="col-12">
-                <div class="screen start-screen text-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <h1>Think your brain is as big as Jupiter and faster than light in a vacuum? Let's find out!
-                            </h1>
+            <div class="row">
+                <div class="col-12">
+                    <div class="screen start-screen text-center">
+                        <div class="row">
+                            <div class="col-12">
+                                <h1>Think your brain is as big as Jupiter and faster than light in a vacuum? Let's find out!
+                                </h1>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-6">
-                            <button type="button" id="start-btn" class="btn btn-primary start-btn">Start Game</button>
+                        <div class="row text-center">
+                            <div class="col-6">
+                                <button type="button" id="start-btn" class="btn btn-primary start-btn">Start Game</button>
+                            </div>
+                            <div class="col-6">
+                                <a href="https://github.com/JonathanHansen98/quiz-homework" target = "_blank" class="btn btn-primary code-btn"><span id="code-btn">View Code</span></a>
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <a href="https://github.com/JonathanHansen98/quiz-homework" target = "_blank" class="btn btn-primary code-btn"><span id="code-btn">View Code</span></a>
-                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
     </div>
-
 
     <!-- Screen Section -->
 
@@ -162,7 +161,7 @@
                     <div class="col-12 m-auto">
                         <form id="form">
                             <input id="initials" type="text" placeholder="Enter initials here">
-                            <input id="submit-btn" type="submit">
+                            <input id="submit-btn" class="btn btn-primary"type="submit">
                         </form>
                     </div>
                 </div>
@@ -175,7 +174,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="screen text-center">
-                    <h3 class="">Leaderboards:</h3>
+                    <h3 class="">Past Scores:</h3>
                     <div id="scores">
 
                     </div>
