more little stuff

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
                                 </h1>
                             </div>
                         </div>
+
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Correct answer: +2s</p>
+                            </div>
+                            <div class="col-6">
+                                <p>Incorrect answer: -5s</p>
+                            </div>
+                        </div>
+                        
+
                         <div class="row text-center">
                             <div class="col-6">
                                 <button type="button" id="start-btn" class="btn btn-primary start-btn">Start Game</button>
